grammar.ebnf
program         = { decl } ;

decl            = fun-decl ;

fun-decl        = "fun" ident ":" "int" "{" { stmt } "}" ;

stmt            = return-stmt ;

return-stmt     = "return" expr ;

expr            = ("~" | "-" | "!") expr | number ;
